test/Fail/Issue756b.err
Issue756b.agda:12.7-42: error: [NotAllowedInDotPatterns.PatternLambdas]
Pattern lambdas are not allowed in dot patterns
when scope checking λ { zero → zero ; (suc n) → suc n }
